// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders caption applying style 1`] = `
<Text
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
      },
      {
        "textAlign": "left",
      },
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 0.54)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          {
            "color": "#f44336",
            "fontSize": 20,
          },
        ],
      ],
    ]
  }
>
  Big and red caption
</Text>
`;

exports[`renders caption with children as content 1`] = `
<Text
  style={
    [
      {
        "color": "rgba(28, 27, 31, 1)",
      },
      {
        "textAlign": "left",
      },
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 0.54)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          undefined,
        ],
      ],
    ]
  }
>
  Caption content
</Text>
`;
